--- a/package.json
+++ b/package.json
@@ -2,9 +2,16 @@
   "name": "feature-builder",
   "version": "1.0.0",
   "description": "",
+  "files": [
+    "lib/**"
+  ],
   "main": "index.js",
+  "bin": "./lib/cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc",
+    "format": "prettier --write \"src/**\"",
+    "lint": "tslint -p tsconfig.json"
   },
   "repository": {
     "type": "git",
@@ -16,5 +23,14 @@
   "bugs": {
     "url": "https://github.com/Dalomo/Feature-Builder/issues"
   },
-  "homepage": "https://github.com/Dalomo/Feature-Builder#readme"
+  "homepage": "https://github.com/Dalomo/Feature-Builder#readme",
+  "devDependencies": {
+    "prettier": "^2.1.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^4.0.3"
+  },
+  "dependencies": {
+    "@types/node": "^14.11.2"
+  }
 }
