added implementation for the cli to be usable, for more information run feature-builder help

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "files": [
     "lib/**"
   ],
-  "main": "index.js",
+  "main": "./index.js",
   "bin": "./lib/cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "format": "prettier --write \"src/**\"",
-    "lint": "tslint -p tsconfig.json"
+    "lint": "tslint -p tsconfig.json",
+    "install": "node ./lib/lifecycle/install.js",
+    "uninstall": "node ./lib/lifecycle/unistall.js"
   },
   "repository": {
     "type": "git",
