--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feature-builder",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.1",
+  "description": "Turn features on and off",
   "files": [
     "lib/**"
   ],
@@ -20,19 +20,18 @@
     "url": "git+https://github.com/Dalomo/Feature-Builder.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "dalomo",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Dalomo/Feature-Builder/issues"
   },
   "homepage": "https://github.com/Dalomo/Feature-Builder#readme",
   "devDependencies": {
+    "@types/node": "^14.11.2",
     "prettier": "^2.1.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.0.3"
   },
-  "dependencies": {
-    "@types/node": "^14.11.2"
-  }
+  "dependencies": {}
 }
